@@ -10,6 +10,7 @@ Changelog
  * Improved diffing behavior for text fields (Aliosha Padovani)
  * Improve contrast of disabled inputs (Nick Smith)
  * Added ``get_document_model_string`` function (Andrey Smirnov)
+ * Added support for Cloudflare API tokens for frontend cache invalidation (Tom Usher)
  * Fix: Rename documents listing column 'uploaded' to 'created' (LB (Ben Johnston))
  * Fix: Submenu items longer then the page height are no longer broken by the submenu footer (Igor van Spengen)
  * Fix: Unbundle the l18n library as it was bundled to avoid installation errors which have been resolved (Matt Westcott)
